# malvavisco

./: AddPlayers.qml  Blanco.qml  CMakeLists.txt  GameDrawer.qml  GameDrawerItem.qml  Home.qml  Home2.qml  README.md  Training.qml  blancocontroller.cpp  blancocontroller.h  db.qrc  image.qrc  main.qml  qml.qrc
res/: db.qrc  fonts.qrc  image.qrc  json.qrc  palabras.sqlite
res/json/: blancoStatic.json
src/: blancocontroller.cpp  main.cpp
src/controller/: blancocontroller.cpp  blancocontroller.h
src/model/: blancomodel.cpp  blancomodel.h  gamemodel.cpp  gamemodel.h
src/qml/: AddPlayers.qml  Blanco.qml  BlancoPage.qml  CarruselElementTemplate.qml  Common.qml  Game.qml  GameDrawer.qml  GameSetUp.qml  GamesBox.qml  Home.qml  Home2.qml  TestGameBox.qml  TestGameCard.qml  main.qml  qml.qrc
src/qml/blanco/: Blanco_AddPlayers.qml  Blanco_Debate.qml  Blanco_End.qml  Blanco_NextButton.qml  Blanco_Page.qml  Blanco_Settings.qml  Blanco_WordAssign.qml  Blanco_WordCalling.qml
src/qml/lobby/: CardView.qml  GameDrawer.qml  GameDrawerItem.qml
